feat(log): 全面启用 Log4j2 日志框架
- 在所有模块的 pom.xml 中排除 Spring Boot 默认的 Logback，使用 Log4j2
- 添加 Log4j2 相关依赖和配置
- 新增 log4j2.xml 配置文件，定制日志输出格式和策略
- 优化部分代码，如移除 ServiceGatewayApplicationTests 中的空测试方法